(fix)-> fixed font family attribute in common css files + restructred markup + minor fix to stacking effect using z-index in 6-filters

--- a/web_static/styles/3-common.css
+++ b/web_static/styles/3-common.css
@@ -6,7 +6,7 @@
 body {
     color: #484848;
     font-size: 14px;
-    font: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
     margin: 0;
     padding: 0;
 }
