--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -35,8 +35,9 @@
 /* filter styles */
 .filters .locations,
 .filters .amenities {
-    display: inline-flex;
+    display: flex;
     flex-direction: column;
+    float: left;
     height: 100%;
     justify-content: center;
     width: 25%;
@@ -55,10 +56,11 @@
     background-color: #fafafa;
     border-radius: 4px;
     display: none;
+    padding: 20px 0;
     position: absolute;
     top: 100%;
-    right: 0;
     width: 100%;
+    z-index: 1;
 }
 
 /* filters hover popover style */
